fix theming scrollbars and svg on safari

--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,16 @@ html {
   height: 100%;
 }
 
+@media (prefers-color-scheme: dark) {
+  :root {
+    --theme: #0d0d0d;
+  }
+}
+@media (prefers-color-scheme: light) {
+  :root {
+    --theme: #ededed;
+  }
+}
 html,
 body,
 #root {
